--- a/flydb-plug/build.gradle
+++ b/flydb-plug/build.gradle
@@ -1,39 +1,42 @@
 plugins {
-  id("java")
-  id("org.jetbrains.intellij") version "1.17.3"
+    id("java")
+    id("org.jetbrains.intellij") version "1.17.3"
 }
 
 group = "com.flydb"
 version = "1.0"
 
 repositories {
-  maven { url 'https://maven.aliyun.com/repository/central/'}
-  maven { url 'https://maven.aliyun.com/repository/public/' }
-  maven { url 'https://maven.aliyun.com/repository/google/' }
-  maven { url 'https://maven.aliyun.com/repository/jcenter/'}
-  maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
-  //    mavenCentral()
+    maven { url 'https://maven.aliyun.com/repository/central/' }
+    maven { url 'https://maven.aliyun.com/repository/public/' }
+    maven { url 'https://maven.aliyun.com/repository/google/' }
+    maven { url 'https://maven.aliyun.com/repository/jcenter/' }
+    maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+    //    mavenCentral()
 }
 
 dependencies {
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
-  testRuntimeOnly    'org.junit.jupiter:junit-jupiter-engine:5.9.3'
-  testRuntimeOnly    'org.junit.vintage:junit-vintage-engine:5.9.3'
-  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.9.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
+    implementation 'org.projectlombok:lombok:1.18.22'
+    implementation 'cn.hutool:hutool-all:5.8.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
 intellij {
-  version = '2023.2.6'
+    version = '2023.2.6'
 }
 
 tasks.withType(JavaCompile) {
-  options.encoding = 'UTF-8'
-  options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation', '-parameters']
+    options.encoding = 'UTF-8'
+    options.compilerArgs += ['-Xlint:unchecked', '-Xlint:deprecation', '-parameters']
 }
 
 patchPluginXml {
-  //注意这个版本号不能高于上面intellij的version,否则runIde会报错
-  sinceBuild = '232'
-  untilBuild = '242.*'
+    //注意这个版本号不能高于上面intellij的version,否则runIde会报错
+    sinceBuild = '232'
+    untilBuild = '242.*'
 }
 
