--- a/flydb-plug/build.gradle
+++ b/flydb-plug/build.gradle
@@ -20,9 +20,12 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.9.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
     implementation 'org.projectlombok:lombok:1.18.22'
     implementation 'cn.hutool:hutool-all:5.8.26'
-    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
+
+
 }
 
 intellij {
