--- a/flydb-test/pom.xml
+++ b/flydb-test/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>jsqlparser</artifactId>
             <version>5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk18on</artifactId>
+            <version>1.78.1</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fly</groupId>
