--- a/flydb-test/pom.xml
+++ b/flydb-test/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.5.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>4.1.3</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
