--- a/flydb-test/src/main/resources/application-dev.yml
+++ b/flydb-test/src/main/resources/application-dev.yml
@@ -4,3 +4,9 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/flydb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: sw@3100@admin
+#    dynamic:
+#      datasource:
+#        primary:
+#          url: jdbc:mysql://127.0.0.1:3306/flydb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=As
+#        master:
+#          url: jdbc:mysql://127.0.0.1:3306/1111111?useUnicode=true&characterEncoding=UTF-8&serverTimezone=As
