--- a/flydb-plug/build.gradle
+++ b/flydb-plug/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.github.jsqlparser:jsqlparser:5.0'
     implementation 'org.xerial:sqlite-jdbc:3.8.11.2'
     implementation 'mysql:mysql-connector-java:8.0.29'
+    implementation 'com.alibaba:druid:1.2.7'
     implementation 'org.yaml:snakeyaml:2.0'
 }
 
