--- a/flydb-test/src/main/resources/application-test.properties
+++ b/flydb-test/src/main/resources/application-test.properties
@@ -2,6 +2,6 @@
 #spring.datasource.username= root
 #spring.datasource.password= sw@3100@admin
 
-spring.datasource.dynamic.datasource.master.url= jdbc:mysql://127.0.0.1:3306/flydb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-spring.datasource.dynamic.datasource.master.username= root
-spring.datasource.dynamic.datasource.master.password= sw@3100@admin
+#spring.datasource.dynamic.datasource.master.url= jdbc:mysql://127.0.0.1:3306/flydb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+#spring.datasource.dynamic.datasource.master.username= root
+#spring.datasource.dynamic.datasource.master.password= sw@3100@admin
