--- a/flydb-spring-boot-starter/pom.xml
+++ b/flydb-spring-boot-starter/pom.xml
@@ -36,13 +36,10 @@
             <optional>true</optional>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        <!--简化掉-->
         <dependency>
             <groupId>cn.hutool</groupId>
-            <artifactId>hutool-db</artifactId>
+            <artifactId>hutool-all</artifactId>
             <version>5.8.26</version>
         </dependency>
         <dependency>
@@ -50,6 +47,7 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <!--必须引入-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -58,6 +56,12 @@
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.41.2.2</version>
+        </dependency>
+
+        <!--有web需求时再引入-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
